--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-        />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="build/styles.min.css" />
-        <title>Easy HTML Table Maker</title>
-    </head>
-    <body>
-        <h1>Easy HTML Table Maker</h1>
-        <noscript>Please enable JS to use the table maker.</noscript>
-        <div id="loading-modal"></div>
-        <div id="editor-area" class="editor-area">
-            <div id="editor-table-container"></div>
-        </div>
-        <div class="output">
-            <code id="table-code"></code>
-            <button id="copy-table-code">Copy Table Code</button>
-        </div>
-        <button id="add-csv">Import Data from CSV</button>
-        <script type="text/javascript" src="build/index.min.js"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="build/styles.min.css" />
+    <title>Easy HTML Table Maker</title>
+</head>
+
+<body>
+    <h1>Easy HTML Table Maker</h1>
+    <noscript>Please enable JS to use the table maker.</noscript>
+    <div id="loading-modal"></div>
+    <div id="editor-area" class="editor-area">
+        <div id="editor-table-container"></div>
+    </div>
+    <div class="output">
+        <code id="table-code"></code>
+        <button id="copy-table-code">Copy Table Code</button>
+    </div>
+    <button id="add-csv">Import Data from CSV</button>
+    <script type="text/javascript" src="build/index.min.js"></script>
+</body>
+
 </html>
