--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
         <div class="output">
             <h2>Table Markup</h2>
+            <button id="copy-table-code">Copy table markup</button><br />
             <code id="table-code"></code>
-            <button id="copy-table-code">Copy table markup</button>
             <h2>Table Preview</h2>
             <div id="preview"></div>
         </div>
