Broke up createEditorTable into components and utilities
Also Removed StateMachine

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
     <div class="output">
         <h2>Table Markup</h2>
+        <div id="markup-controls"></div>
         <code id="table-code"></code>
-        <button id="copy-table-code">Copy table markup</button>
         <h2>Table Preview</h2>
         <div id="preview"></div>
     </div>
