--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1>Easy HTML Table Maker</h1>
+    <h1>easy html table maker</h1>
     <noscript>Please enable JS to use the table maker.</noscript>
     <div id="loading-modal" class="loading-modal">
       <div class="loading-circle" aria-hidden="true"></div>
