added fonts, updating styles

--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <link href="build/styles.min.css" rel="stylesheet" />
-    <title>Easy HTML Table Maker</title>
+    <title>easy html table maker</title>
   </head>
 
   <body>
-    <h1>easy html table maker</h1>
+    <h1>easy html <span>table</span> maker</h1>
     <noscript>Please enable JS to use the table maker.</noscript>
     <div id="loading-modal" class="loading-modal">
       <div class="loading-circle" aria-hidden="true"></div>
       <span>Loading</span>
     </div>
     <div id="editor-area" class="editor-area">
-      <h2>Table Editor</h2>
+      <h2>table editor</h2>
       <div id="editor-table-container"></div>
     </div>
     <div class="output">
-      <h2>Table Markup</h2>
+      <h2>table markup</h2>
       <div id="markup-controls"></div>
       <code id="table-code"></code>
-      <h2>Table Preview</h2>
+      <h2>table preview</h2>
       <div id="preview"></div>
     </div>
-    <button id="add-csv">Import Data from CSV</button>
+    <button id="add-csv">import data from CSV</button>
     <script type="text/javascript" src="build/index.min.js"></script>
   </body>
 </html>
