adding styles for markup and preview / added some html markup

--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
       <h2>table editor</h2>
       <div id="editor-table-container"></div>
     </div>
-    <div class="output">
-      <h2>table markup</h2>
-      <div id="markup-controls"></div>
-      <code id="table-code"></code>
-      <h2>table preview</h2>
-      <div id="preview"></div>
-    </div>
+    <section class="table-code-and-preview-section">
+      <div id="markup">
+        <h2>table markup</h2>
+        <div id="markup-controls"></div>
+        <code id="table-code"></code>
+      </div>
+      <div id="preview">
+        <h2>table preview</h2>
+      </div>
+    </section>
     <button id="add-csv">import data from CSV</button>
     <script type="text/javascript" src="build/index.min.js"></script>
   </body>
