added table code wrapping spans and styles

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     </div>
     <section class="table-code-and-preview-section">
       <div id="markup">
-        <h2>table markup</h2>
-        <div id="markup-controls"></div>
+        <div class="title-and-copy-button">
+          <h2>table markup</h2>
+          <div id="markup-controls"></div>
+        </div>
         <code id="table-code"></code>
       </div>
       <div id="preview">
