working on text-align logic...

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   </head>
 
   <body>
+    <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <defs>
+        <symbol id="icon-text-align-left" viewBox="0 0 32 32">
+          <path d="M0 2h32v4h-32zM0 8h20v4h-20zM0 20h20v4h-20zM0 14h32v4h-32zM0 26h32v4h-32z"></path>
+        </symbol>
+        <symbol id="icon-text-align-center" viewBox="0 0 32 32">
+          <path d="M0 2h32v4h-32zM6 8h20v4h-20zM6 20h20v4h-20zM0 14h32v4h-32zM0 26h32v4h-32z"></path>
+        </symbol>
+        <symbol id="icon-text-align-right" viewBox="0 0 32 32">
+          <path d="M0 2h32v4h-32zM12 8h20v4h-20zM12 20h20v4h-20zM0 14h32v4h-32zM0 26h32v4h-32z"></path>
+        </symbol>
+      </defs>
+    </svg>
     <h1>easy html <span>table</span> maker</h1>
     <noscript>Please enable JS to use the table maker.</noscript>
     <div id="loading-modal" class="loading-modal">
