--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
         <symbol id="icon-text-align-right" viewBox="0 0 32 32">
           <path d="M0 2h32v4h-32zM12 8h20v4h-20zM12 20h20v4h-20zM0 14h32v4h-32zM0 26h32v4h-32z"></path>
         </symbol>
+        <symbol id="icon-vertical-align-baseline" viewBox="0 0 32 32">
+          <path d="M2 6h28v6h-28zM2 14h28v6h-28zM2 22h28v6h-28z"></path>
+        </symbol>
+        <symbol id="icon-vertical-align-middle" viewBox="0 0 44 32">
+          <path d="M0 6h28v6h-28v-6zM0 14h28v6h-28v-6zM0 22h28v6h-28v-6z"></path>
+          <path d="M31 18l6 6 6-6z"></path>
+          <path d="M43 16l-6-6-6 6z"></path>
+        </symbol>
+        <symbol id="icon-vertical-align-bottom" viewBox="0 0 44 32">
+          <path d="M0 6h28v6h-28v-6zM0 14h28v6h-28v-6zM0 22h28v6h-28v-6z"></path>
+          <path d="M31 14l6 6 6-6z"></path>
+        </symbol>
+        <symbol id="icon-vertical-align-top" viewBox="0 0 44 32">
+          <path d="M0 6h28v6h-28v-6zM0 14h28v6h-28v-6zM0 22h28v6h-28v-6z"></path>
+          <path d="M31 20l6-6 6 6z"></path>
+        </symbol>
       </defs>
     </svg>
     <h1>easy html <span>table</span> maker</h1>
